Guide: completed text on function entry/exit tracing. Utilities, better option parsing. decodecrf: support DWARF lookup of functions on CTF decoding. bmtrace: load DWARF symbols (add option to set an ELF filename). parsetsdl: bug fix in allowing quoted strings as identifiers. tracegen: option to add "no-instrument-function" attribute; only use alloca() when a function has variable length strings as parameters. For SWO tracing, use the endpoint reported by the Black Magic Probe.

--- a/source/Makefile.linux
+++ b/source/Makefile.linux
@@ -86,8 +86,8 @@ OBJLIST_BMFLASH = bmflash.o bmp-scan.o bmp-script.o bmp-support.o crc32.o \
                   findfont.o lodepng.o
 
 OBJLIST_BMTRACE = bmtrace.o bmp-scan.o bmp-script.o bmp-support.o crc32.o \
-                  elf.o gdb-rsp.o guidriver.o minIni.o nuklear_tooltip.o \
-                  rs232.o specialfolder.o xmltractor.o \
+                  dwarf.o elf.o gdb-rsp.o guidriver.o minIni.o
+                  nuklear_tooltip.o rs232.o specialfolder.o xmltractor.o \
                   decodectf.o parsetsdl.o swotrace.o \
                   nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o \
                   findfont.o lodepng.o
