--- a/source/makefile.dep
+++ b/source/makefile.dep
@@ -13,7 +13,7 @@ guidriver.obj : guidriver.h nuklear.h nuklear_config.h
 minini.obj : minGlue.h minIni.h
 rs232.obj : rs232.h
 specialfolder.obj : specialfolder.h strlcpy.h
-decodectf.obj : decodectf.h parsetsdl.h strlcpy.h
+decodectf.obj : decodectf.h parsetsdl.h dwarf.h strlcpy.h
 parsetsdl.obj : parsetsdl.h strlcpy.h
 swotrace.obj : bmp-scan.h decodectf.h guidriver.h nuklear.h \
 	 nuklear_config.h parsetsdl.h strlcpy.h swotrace.h
@@ -29,7 +29,7 @@ crc32.obj : crc32.h
 gdb-rsp.obj : gdb-rsp.h rs232.h
 xmltractor.obj : xmltractor.h
 bmtrace.obj : bmp-script.h bmp-support.h bmp-scan.h \
-	 decodectf.h gdb-rsp.h guidriver.h minGlue.h minIni.h \
+	 decodectf.h dwarf.h elf.h gdb-rsp.h guidriver.h minGlue.h minIni.h \
 	 nuklear_tooltip.h noc_file_dialog.h nuklear.h nuklear_config.h \
 	 parsetsdl.h rs232.h specialfolder.h strlcpy.h swotrace.h
 elf-postlink.obj : elf.h
@@ -47,7 +47,7 @@ guidriver.o : guidriver.h nuklear.h nuklear_config.h findfont.h \
 minIni.o : minIni.h minGlue.h
 rs232.o : rs232.h
 specialfolder.o : specialfolder.h
-decodectf.o : parsetsdl.h decodectf.h
+decodectf.o : parsetsdl.h decodectf.h dwarf.h
 parsetsdl.o : parsetsdl.h
 swotrace.o : bmp-scan.h guidriver.h nuklear.h nuklear_config.h parsetsdl.h \
 	decodectf.h swotrace.h
@@ -67,7 +67,8 @@ xmltractor.o : xmltractor.h
 bmtrace.o : guidriver.h nuklear.h nuklear_config.h bmp-script.h \
 	bmp-support.h bmp-scan.h gdb-rsp.h minIni.h minGlue.h \
 	nuklear_tooltip.h noc_file_dialog.h rs232.h specialfolder.h \
-	parsetsdl.h decodectf.h swotrace.h res/icon_download_64.h
+	parsetsdl.h decodectf.h dwarf.h elf.h \
+	swotrace.h res/icon_download_64.h
 elf-postlink.o : elf.h
 tracegen.o : parsetsdl.h
 
