Fixed traceswo response parsing error
Updated VSCode launch task

--- a/source/.vscode/launch.json
+++ b/source/.vscode/launch.json
@@ -10,12 +10,32 @@
             "request": "launch",
             "program": "${workspaceFolder}/bmdebug.exe",
             "args": [],
-            "stopAtEntry": false,
+            "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
-            "miDebuggerPath": "C:/Strawberry/c/bin/gdb.exe",
+            "miDebuggerPath": "gdb.exe",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+            "name": "Launch bmtrace.exe",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/bmtrace.exe",
+            "args": [],
+            "stopAtEntry": true,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "miDebuggerPath": "gdb.exe",
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
