--- a/source/Makefile.mingw
+++ b/source/Makefile.mingw
@@ -12,10 +12,6 @@
 # Options to set in makefile.cfg
 #  o  CDIR          the root path to where the MingW GCC compiler is installed
 #                   (may be left empty if it is in the PATH)
-#  o  WINUSB_INC    the path where the include files for WINUSB can be found,
-#                   including the -I option; for exampe: -Ic:/ddk/inc
-#  o  WINUSB_LIB    the path where the WINUSB DLL or import library can be
-#                   found (for the linker)
 -include makefile.cfg
 
 
@@ -41,11 +37,11 @@ endif
 CL        := $(CDIR_BIN)gcc
 CC        := $(CDIR_BIN)gcc -c
 CFLAGS    := -Wall
-INCLUDE   := $(WINUSB_INC)
+INCLUDE   :=
 
 ####### Linker
 LNK       := $(CDIR_BIN)gcc
-LFLAGS    := $(WINUSB_LIB)
+LFLAGS    :=
 LFLAGS_GUI:= -Wl,-subsystem,windows
 
 
@@ -74,6 +70,7 @@ endif
 OBJLIST_BMDEBUG = bmdebug.o bmp-scan.o bmp-script.o dwarf.o elf.o \
                   guidriver.o minIni.o rs232.o nuklear_tooltip.o \
                   specialfolder.o strlcpy.o decodectf.o parsetsdl.o swotrace.o \
+                  usb-support.o \
                   nuklear.o nuklear_gdip.o noc_file_dialog.o
 
 OBJLIST_BMFLASH = bmflash.o bmp-scan.o bmp-script.o bmp-support.o crc32.o \
@@ -83,7 +80,7 @@ OBJLIST_BMFLASH = bmflash.o bmp-scan.o bmp-script.o bmp-support.o crc32.o \
 
 OBJLIST_BMTRACE = bmtrace.o bmp-scan.o bmp-script.o bmp-support.o crc32.o \
                   dwarf.o elf.o gdb-rsp.o guidriver.o minIni.o nuklear_tooltip.o \
-                  rs232.o specialfolder.o xmltractor.o strlcpy.o \
+                  rs232.o specialfolder.o xmltractor.o strlcpy.o usb-support.o \
                   decodectf.o parsetsdl.o swotrace.o \
                   nuklear.o nuklear_gdip.o noc_file_dialog.o
 
@@ -144,6 +141,8 @@ swotrace.o : swotrace.c
 
 tracegen.o : tracegen.c
 
+usb-support.o : usb-support.c
+
 xmltractor.o : xmltractor.c
 
 decodectf.o : decodectf.c
@@ -170,13 +169,13 @@ bmtrace.res : bmtrace.rc
 ##### Executables #####
 
 bmdebug.exe : $(OBJLIST_BMDEBUG)
-	$(LNK) $(LFLAGS) $(LFLAGS_GUI) -o$@ $^ -lm -lcomdlg32 -lgdi32 -lgdiplus -lsetupapi -lshlwapi -lwinusb
+	$(LNK) $(LFLAGS) $(LFLAGS_GUI) -o$@ $^ -lm -lcomdlg32 -lgdi32 -lgdiplus -lsetupapi -lshlwapi
 
 bmflash.exe : $(OBJLIST_BMFLASH)
 	$(LNK) $(LFLAGS) $(LFLAGS_GUI) -o$@ $^ -lm -lcomdlg32 -lgdi32 -lgdiplus -lshlwapi
 
 bmtrace.exe : $(OBJLIST_BMTRACE)
-	$(LNK) $(LFLAGS) $(LFLAGS_GUI) -o$@ $^ -lm -lcomdlg32 -lgdi32 -lgdiplus -lsetupapi -lshlwapi -lwinusb
+	$(LNK) $(LFLAGS) $(LFLAGS_GUI) -o$@ $^ -lm -lcomdlg32 -lgdi32 -lgdiplus -lsetupapi -lshlwapi
 
 bmscan.exe : $(OBJLIST_BMSCAN)
 	$(LNK) $(LFLAGS) -o$@ $^
