All GUI utilities: fixed handling of setting the font size with the -f parameter. All GUI utilities: font name can now be set with the -f parameter too. bmp_support: renamed crc32.c() to gdb_crc32() to avoid a naming conflict with a standard GTK library function.

--- a/source/bmflash.rc
+++ b/source/bmflash.rc
@@ -3,7 +3,7 @@
  * the Black Magic Probe on a system. This utility is built with Nuklear for a
  * cross-platform GUI.
  *
- * Copyright 2019 CompuPhase
+ * Copyright 2019-2020 CompuPhase
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -36,7 +36,7 @@ AppIcon ICON "res/icon_download.ico"
 #define VERSIONDESCRIPTION   "Flash programming tool\0"
 #define VERSIONCOMPANYNAME   "CompuPhase\0"
 #define VERSIONPRODUCTNAME   "bmflash\0"
-#define VERSIONCOPYRIGHT     "Copyright \251 ITB CompuPhase 2019\0"
+#define VERSIONCOPYRIGHT     "Copyright \251 CompuPhase 2019-2020\0"
 
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION    VERSION, REVISION, BUILD, 0
