--- a/source/makefile.dep
+++ b/source/makefile.dep
@@ -4,8 +4,9 @@
 
 bmdebug.obj : bmp-script.h bmp-scan.h decodectf.h dwarf.h guidriver.h minGlue.h \
 	 minIni.h nuklear_tooltip.h noc_file_dialog.h nuklear.h nuklear_config.h \
-	 parsetsdl.h specialfolder.h strlcpy.h swotrace.h
-bmscan.obj : bmp-scan.h
+	 parsetsdl.h specialfolder.h strlcpy.h swotrace.h tcpip.h
+bmp-scan.obj : bmp-scan.h tcpip.h
+bmscan.obj : bmp-scan.h tcpip.h
 bmp-script.obj : bmp-script.h
 dwarf.obj : dwarf.h elf.h
 elf.obj : elf.h
@@ -13,6 +14,7 @@ guidriver.obj : guidriver.h nuklear.h nuklear_config.h
 minini.obj : minGlue.h minIni.h
 rs232.obj : rs232.h
 specialfolder.obj : specialfolder.h strlcpy.h
+tcpip.obj : tcpip.h
 decodectf.obj : decodectf.h parsetsdl.h dwarf.h strlcpy.h
 parsetsdl.obj : parsetsdl.h strlcpy.h
 swotrace.obj : bmp-scan.h decodectf.h guidriver.h nuklear.h \
@@ -23,24 +25,26 @@ nuklear_gdip.obj : nuklear.h nuklear_config.h nuklear_gdip.h
 noc_file_dialog.obj : noc_file_dialog.h
 bmflash.obj : bmp-script.h bmp-support.h elf.h gdb-rsp.h guidriver.h \
 	 minGlue.h minIni.h nuklear_tooltip.h noc_file_dialog.h nuklear.h \
-	 nuklear_config.h rs232.h specialfolder.h
+	 nuklear_config.h rs232.h specialfolder.h tcpip.h
 bmp-support.obj : bmp-script.h bmp-support.h bmp-scan.h \
-	 crc32.h elf.h gdb-rsp.h rs232.h strlcpy.h xmltractor.h
+	 crc32.h elf.h gdb-rsp.h rs232.h strlcpy.h tcpip.h xmltractor.h
 crc32.obj : crc32.h
-gdb-rsp.obj : gdb-rsp.h rs232.h
+gdb-rsp.obj : gdb-rsp.h rs232.h tcpip.h
 xmltractor.obj : xmltractor.h
 bmtrace.obj : bmp-script.h bmp-support.h bmp-scan.h \
 	 decodectf.h dwarf.h elf.h gdb-rsp.h guidriver.h minGlue.h minIni.h \
 	 nuklear_tooltip.h noc_file_dialog.h nuklear.h nuklear_config.h \
-	 parsetsdl.h rs232.h specialfolder.h strlcpy.h swotrace.h
+	 parsetsdl.h rs232.h specialfolder.h strlcpy.h swotrace.h tcpip.h
 elf-postlink.obj : elf.h
 tracegen.obj : parsetsdl.h strlcpy.h
 usb-support.obj : usb-support.h
 
 bmdebug.o : bmp-scan.h bmp-script.h dwarf.h guidriver.h nuklear.h \
 	nuklear_config.h noc_file_dialog.h minIni.h minGlue.h nuklear_tooltip.h \
-	specialfolder.h parsetsdl.h decodectf.h swotrace.h res/icon_debug_64.h
-bmscan.o : bmp-scan.h
+	specialfolder.h parsetsdl.h decodectf.h swotrace.h tcpip.h \
+	res/icon_debug_64.h
+bmp-scan.o : bmp-scan.h tcpip.h
+bmscan.o : bmp-scan.h tcpip.h
 bmp-script.o : bmp-script.h
 dwarf.o : dwarf.h elf.h
 elf.o : elf.h
@@ -49,6 +53,7 @@ guidriver.o : guidriver.h nuklear.h nuklear_config.h findfont.h \
 minIni.o : minIni.h minGlue.h
 rs232.o : rs232.h
 specialfolder.o : specialfolder.h
+tcpip.o : tcpip.h
 decodectf.o : parsetsdl.h decodectf.h dwarf.h
 parsetsdl.o : parsetsdl.h
 swotrace.o : bmp-scan.h guidriver.h nuklear.h nuklear_config.h parsetsdl.h \
@@ -60,17 +65,18 @@ noc_file_dialog.o : noc_file_dialog.h
 lodepng.o : lodepng.h
 bmflash.o : guidriver.h nuklear.h nuklear_config.h noc_file_dialog.h \
 	bmp-script.h bmp-support.h elf.h gdb-rsp.h minIni.h minGlue.h \
-	nuklear_tooltip.h rs232.h specialfolder.h res/icon_download_64.h
+	nuklear_tooltip.h rs232.h specialfolder.h tcpip.h \
+	res/icon_download_64.h
 bmp-support.o : bmp-scan.h bmp-script.h bmp-support.h crc32.h elf.h \
-	gdb-rsp.h rs232.h xmltractor.h
+	gdb-rsp.h rs232.h tcpip.h xmltractor.h
 crc32.o : crc32.h
-gdb-rsp.o : rs232.h
+gdb-rsp.o : rs232.h tcpip.h
 xmltractor.o : xmltractor.h
 bmtrace.o : guidriver.h nuklear.h nuklear_config.h bmp-script.h \
 	bmp-support.h bmp-scan.h gdb-rsp.h minIni.h minGlue.h \
 	nuklear_tooltip.h noc_file_dialog.h rs232.h specialfolder.h \
-	parsetsdl.h decodectf.h dwarf.h elf.h \
-	swotrace.h res/icon_download_64.h
+	parsetsdl.h decodectf.h dwarf.h elf.h swotrace.h tcpip.h\
+	res/icon_download_64.h
 elf-postlink.o : elf.h
 tracegen.o : parsetsdl.h
 usb-support.o : usb-support.h
