--- a/source/Makefile.linux
+++ b/source/Makefile.linux
@@ -75,24 +75,25 @@ endif
 
 OBJLIST_BMDEBUG = bmdebug.o bmp-scan.o bmp-script.o dwarf.o elf.o \
                   guidriver.o minIni.o nuklear_tooltip.o rs232.o \
-                  specialfolder.o decodectf.o parsetsdl.o swotrace.o \
+                  specialfolder.o tcpip.o decodectf.o parsetsdl.o swotrace.o \
                   nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o \
                   findfont.o lodepng.o
 
 OBJLIST_BMFLASH = bmflash.o bmp-scan.o bmp-script.o bmp-support.o crc32.o \
                   elf.o gdb-rsp.o guidriver.o minIni.o nuklear_tooltip.o \
-                  rs232.o specialfolder.o xmltractor.o \
+                  rs232.o specialfolder.o tcpip.o xmltractor.o \
                   nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o \
                   findfont.o lodepng.o
 
 OBJLIST_BMTRACE = bmtrace.o bmp-scan.o bmp-script.o bmp-support.o crc32.o \
                   dwarf.o elf.o gdb-rsp.o guidriver.o minIni.o \
-                  nuklear_tooltip.o rs232.o specialfolder.o xmltractor.o \
+                  nuklear_tooltip.o rs232.o specialfolder.o tcpip.o \
+                  xmltractor.o \
                   decodectf.o parsetsdl.o swotrace.o \
                   nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o \
                   findfont.o lodepng.o
 
-OBJLIST_BMSCAN = bmscan.o bmp-scan.o
+OBJLIST_BMSCAN = bmscan.o bmp-scan.o tcpip.o
 
 OBJLIST_POSTLINK = elf-postlink.o elf.o
 
@@ -148,6 +149,8 @@ rs232.o : rs232.c
 specialfolder.o : specialfolder.c
 
 swotrace.o : swotrace.c
+
+tcpip.o : tcpip.c
 
 tracegen.o : tracegen.c
 
