--- a/source/Makefile.mingw
+++ b/source/Makefile.mingw
@@ -71,22 +71,23 @@ endif
 
 OBJLIST_BMDEBUG = bmdebug.o bmp-scan.o bmp-script.o dwarf.o elf.o \
                   guidriver.o minIni.o rs232.o nuklear_tooltip.o \
-                  specialfolder.o strlcpy.o decodectf.o parsetsdl.o swotrace.o \
-                  usb-support.o \
+                  specialfolder.o strlcpy.o decodectf.o parsetsdl.o strlcpy.o \
+                  swotrace.o tcpip.o usb-support.o \
                   nuklear.o nuklear_gdip.o noc_file_dialog.o
 
 OBJLIST_BMFLASH = bmflash.o bmp-scan.o bmp-script.o bmp-support.o crc32.o \
                   elf.o gdb-rsp.o guidriver.o minIni.o nuklear_tooltip.o rs232.o \
-                  specialfolder.o xmltractor.o strlcpy.o \
+                  specialfolder.o xmltractor.o strlcpy.o tcpip.o \
                   nuklear.o nuklear_gdip.o noc_file_dialog.o
 
 OBJLIST_BMTRACE = bmtrace.o bmp-scan.o bmp-script.o bmp-support.o crc32.o \
                   dwarf.o elf.o gdb-rsp.o guidriver.o minIni.o nuklear_tooltip.o \
-                  rs232.o specialfolder.o xmltractor.o strlcpy.o usb-support.o \
+                  rs232.o specialfolder.o xmltractor.o strlcpy.o tcpip.o \
+                  usb-support.o \
                   decodectf.o parsetsdl.o swotrace.o \
                   nuklear.o nuklear_gdip.o noc_file_dialog.o
 
-OBJLIST_BMSCAN = bmscan.o bmp-scan.o strlcpy.o
+OBJLIST_BMSCAN = bmscan.o bmp-scan.o strlcpy.o tcpip.o
 
 OBJLIST_POSTLINK = elf-postlink.o elf.o
 
@@ -140,6 +141,8 @@ specialfolder.o : specialfolder.c
 strlcpy.o : strlcpy.c
 
 swotrace.o : swotrace.c
+
+tcpip.o : tcpip.c
 
 tracegen.o : tracegen.c
 
