--- a/source/Makefile.msvc
+++ b/source/Makefile.msvc
@@ -64,18 +64,19 @@ LFLAGS_C  = $(L_DEBUG) /NOLOGO /SUBSYSTEM:console
 # -------------------------------------------------------------
 
 OBJLIST_BMDEBUG = bmdebug.obj bmp-scan.obj bmp-script.obj dwarf.obj elf.obj \
-                  guidriver.obj minini.obj nuklear_tooltip.obj rs232.obj \
-                  specialfolder.obj strlcpy.obj tcpip.obj usb-support.obj \
+                  guidriver.obj minini.obj nuklear_mousepointer.obj nuklear_tooltip.obj \
+                  rs232.obj specialfolder.obj strlcpy.obj tcpip.obj usb-support.obj \
                   decodectf.obj parsetsdl.obj swotrace.obj \
                   nuklear.obj nuklear_gdip.obj noc_file_dialog.obj
 
 OBJLIST_BMFLASH = bmflash.obj bmp-scan.obj bmp-script.obj bmp-support.obj crc32.obj \
-                  elf.obj gdb-rsp.obj guidriver.obj minIni.obj nuklear_tooltip.obj \
-                  rs232.obj specialfolder.obj strlcpy.obj tcpip.obj xmltractor.obj \
+                  elf.obj gdb-rsp.obj guidriver.obj minIni.obj nuklear_mousepointer.obj \
+                  nuklear_tooltip.obj rs232.obj specialfolder.obj strlcpy.obj \
+                  tcpip.obj xmltractor.obj \
                   nuklear.obj nuklear_gdip.obj noc_file_dialog.obj
 
 OBJLIST_BMTRACE = bmtrace.obj bmp-scan.obj bmp-script.obj bmp-support.obj crc32.obj \
-                  dwarf.obj elf.obj gdb-rsp.obj guidriver.obj minini.obj \
+                  dwarf.obj elf.obj gdb-rsp.obj guidriver.obj minini.obj nuklear_mousepointer.obj \
                   nuklear_tooltip.obj rs232.obj specialfolder.obj strlcpy.obj \
                   tcpip.obj usb-support.obj \
                   xmltractor.obj decodectf.obj parsetsdl.obj swotrace.obj \
@@ -125,6 +126,8 @@ gdb-rsp.obj : gdb-rsp.c
 guidriver.obj : guidriver.c
 
 minIni.obj : minIni.c
+
+nuklear_mousepointer.obj : nuklear_mousepointer.c
 
 nuklear_tooltip.obj : nuklear_tooltip.c
 
