--- a/source/Makefile.mingw
+++ b/source/Makefile.mingw
@@ -72,8 +72,8 @@ endif
 OBJLIST_BMDEBUG = bmdebug.o bmp-scan.o bmp-script.o dwarf.o elf.o \
 		guidriver.o minIni.o nuklear_mousepointer.o nuklear_tooltip.o \
 		rs232.o specialfolder.o strlcpy.o tcpip.o usb-support.o \
-		decodectf.o parsetsdl.o swotrace.o \
-		nuklear.o nuklear_gdip.o noc_file_dialog.o
+		svd-support.o decodectf.o parsetsdl.o swotrace.o \
+		xmltractor.o nuklear.o nuklear_gdip.o noc_file_dialog.o
 
 OBJLIST_BMFLASH = bmflash.o bmp-scan.o bmp-script.o bmp-support.o crc32.o \
 		elf.o gdb-rsp.o guidriver.o minIni.o nuklear_mousepointer.o \
@@ -142,6 +142,8 @@ rs232.o : rs232.c
 specialfolder.o : specialfolder.c
 
 strlcpy.o : strlcpy.c
+
+svd-support.o : svd-support.c
 
 swotrace.o : swotrace.c
 
