--- a/source/makefile.dep
+++ b/source/makefile.dep
@@ -2,88 +2,91 @@
 
 # GENERATED DEPENDENCIES. DO NOT DELETE.
 
-bmdebug.obj : bmp-script.h bmp-scan.h decodectf.h dwarf.h guidriver.h minGlue.h \
-	 minIni.h nuklear_mousepointer.h nuklear_tooltip.h noc_file_dialog.h \
-	 nuklear.h nuklear_config.h parsetsdl.h specialfolder.h strlcpy.h \
-	 swotrace.h tcpip.h
+bmdebug.obj : bmp-scan.h bmp-script.h dwarf.h guidriver.h nuklear.h \
+	nuklear_config.h noc_file_dialog.h nuklear_mousepointer.h \
+	nuklear_tooltip.h minIni.h minGlue.h specialfolder.h svd-support.h \
+	tcpip.h parsetsdl.h decodectf.h swotrace.h
 bmp-scan.obj : bmp-scan.h tcpip.h
-bmscan.obj : bmp-scan.h tcpip.h
-bmp-script.obj : bmp-script.h
+bmp-script.obj : bmp-script.h specialfolder.h
 dwarf.obj : dwarf.h elf.h
 elf.obj : elf.h
-guidriver.obj : guidriver.h nuklear.h nuklear_config.h nuklear_mousepointer.h
-nuklear_tooltip.obj : nuklear.h nuklear_config.h nuklear_tooltip.h
+guidriver.obj : guidriver.h nuklear.h nuklear_config.h \
+	nuklear_mousepointer.h nuklear_gdip.h
+minini.obj : minIni.h minGlue.h
 nuklear_mousepointer.obj : nuklear_mousepointer.h
-minini.obj : minGlue.h minIni.h
+nuklear_tooltip.obj : nuklear_tooltip.h nuklear.h nuklear_config.h
 rs232.obj : rs232.h
-specialfolder.obj : specialfolder.h strlcpy.h
-tcpip.obj : tcpip.h
-decodectf.obj : decodectf.h parsetsdl.h dwarf.h strlcpy.h
-parsetsdl.obj : parsetsdl.h strlcpy.h
-swotrace.obj : bmp-scan.h decodectf.h guidriver.h nuklear.h \
-	 nuklear_config.h parsetsdl.h strlcpy.h swotrace.h \
-	 usb-support.h
+specialfolder.obj : specialfolder.h
+strlcpy.obj : strlcpy.h
+tcpip.obj : bmp-scan.h tcpip.h
+usb-support.obj : usb-support.h
+svd-support.obj : xmltractor.h
+decodectf.obj : parsetsdl.h decodectf.h dwarf.h
+parsetsdl.obj : parsetsdl.h
+swotrace.obj : usb-support.h bmp-scan.h dwarf.h guidriver.h nuklear.h \
+	nuklear_config.h parsetsdl.h decodectf.h swotrace.h
+xmltractor.obj : xmltractor.h
 nuklear.obj : nuklear.h nuklear_config.h
 nuklear_gdip.obj : nuklear.h nuklear_config.h nuklear_gdip.h
 noc_file_dialog.obj : noc_file_dialog.h
-bmflash.obj : bmp-script.h bmp-support.h elf.h gdb-rsp.h guidriver.h \
-	 minGlue.h minIni.h nuklear_tooltip.h noc_file_dialog.h nuklear.h \
-	 nuklear_config.h rs232.h specialfolder.h tcpip.h
-bmp-support.obj : bmp-script.h bmp-support.h bmp-scan.h \
-	 crc32.h elf.h gdb-rsp.h rs232.h strlcpy.h tcpip.h xmltractor.h
+bmflash.obj : guidriver.h nuklear.h nuklear_config.h noc_file_dialog.h \
+	nuklear_tooltip.h bmp-scan.h bmp-script.h bmp-support.h elf.h \
+	gdb-rsp.h minIni.h minGlue.h rs232.h tcpip.h specialfolder.h
+bmp-support.obj : bmp-scan.h bmp-script.h bmp-support.h crc32.h elf.h \
+	gdb-rsp.h rs232.h tcpip.h xmltractor.h
 crc32.obj : crc32.h
-gdb-rsp.obj : gdb-rsp.h rs232.h tcpip.h
-xmltractor.obj : xmltractor.h
-bmtrace.obj : bmp-script.h bmp-support.h bmp-scan.h \
-	 decodectf.h dwarf.h elf.h gdb-rsp.h guidriver.h minGlue.h minIni.h \
-	 nuklear_mousepointer.h nuklear_tooltip.h noc_file_dialog.h nuklear.h \
-	 nuklear_config.h parsetsdl.h rs232.h specialfolder.h strlcpy.h \
-	 swotrace.h tcpip.h
+gdb-rsp.obj : bmp-support.h gdb-rsp.h rs232.h tcpip.h
+minIni.obj : minIni.h minGlue.h
+bmtrace.obj : guidriver.h nuklear.h nuklear_config.h bmp-script.h \
+	bmp-support.h bmp-scan.h gdb-rsp.h minIni.h minGlue.h \
+	noc_file_dialog.h nuklear_mousepointer.h nuklear_tooltip.h rs232.h \
+	specialfolder.h tcpip.h dwarf.h elf.h parsetsdl.h decodectf.h \
+	swotrace.h
+bmscan.obj : bmp-scan.h tcpip.h
 elf-postlink.obj : elf.h
-tracegen.obj : parsetsdl.h strlcpy.h
-usb-support.obj : usb-support.h
+tracegen.obj : parsetsdl.h
+
 
 bmdebug.o : bmp-scan.h bmp-script.h dwarf.h guidriver.h nuklear.h \
-	nuklear_config.h noc_file_dialog.h minIni.h minGlue.h nuklear_tooltip.h \
-	nuklear_mousepointer.h specialfolder.h parsetsdl.h decodectf.h swotrace.h \
-	tcpip.h res/icon_debug_64.h
+	nuklear_config.h noc_file_dialog.h nuklear_mousepointer.h \
+	nuklear_tooltip.h minIni.h minGlue.h specialfolder.h svd-support.h \
+	tcpip.h parsetsdl.h decodectf.h swotrace.h res/icon_debug_64.h
 bmp-scan.o : bmp-scan.h tcpip.h
-bmscan.o : bmp-scan.h tcpip.h
-bmp-script.o : bmp-script.h
+bmp-script.o : bmp-script.h specialfolder.h
 dwarf.o : dwarf.h elf.h
 elf.o : elf.h
-guidriver.o : guidriver.h nuklear.h nuklear_config.h findfont.h \
-	lodepng.h nuklear_glfw_gl2.h nuklear_mousepointer.h
-nuklear_tooltip.o : nuklear.h nuklear_config.h nuklear_tooltip.h
-nuklear_mousepointer.o : nuklear_mousepointer.h
+guidriver.o : guidriver.h nuklear.h nuklear_config.h \
+	nuklear_mousepointer.h findfont.h lodepng.h nuklear_glfw_gl2.h
 minIni.o : minIni.h minGlue.h
+nuklear_tooltip.o : nuklear_tooltip.h nuklear.h nuklear_config.h
+nuklear_mousepointer.o : nuklear_mousepointer.h
 rs232.o : rs232.h
 specialfolder.o : specialfolder.h
-tcpip.o : tcpip.h
+tcpip.o : bmp-scan.h tcpip.h
 decodectf.o : parsetsdl.h decodectf.h dwarf.h
 parsetsdl.o : parsetsdl.h
-swotrace.o : bmp-scan.h guidriver.h nuklear.h nuklear_config.h parsetsdl.h \
-	decodectf.h swotrace.h usb-support.h
+svd-support.o : xmltractor.h
+swotrace.o : bmp-scan.h dwarf.h guidriver.h nuklear.h nuklear_config.h \
+	parsetsdl.h decodectf.h swotrace.h
+xmltractor.o : xmltractor.h
 nuklear.o : nuklear.h nuklear_config.h
-nuklear_gdip.o : nuklear.h nuklear_config.h nuklear_gdip.h
 nuklear_glfw_gl2.o : nuklear_config.h nuklear.h nuklear_glfw_gl2.h
 noc_file_dialog.o : noc_file_dialog.h
 lodepng.o : lodepng.h
 bmflash.o : guidriver.h nuklear.h nuklear_config.h noc_file_dialog.h \
-	bmp-script.h bmp-support.h elf.h gdb-rsp.h minIni.h minGlue.h \
-	nuklear_tooltip.h rs232.h specialfolder.h tcpip.h \
+	nuklear_tooltip.h bmp-scan.h bmp-script.h bmp-support.h elf.h \
+	gdb-rsp.h minIni.h minGlue.h rs232.h tcpip.h specialfolder.h \
 	res/icon_download_64.h
 bmp-support.o : bmp-scan.h bmp-script.h bmp-support.h crc32.h elf.h \
 	gdb-rsp.h rs232.h tcpip.h xmltractor.h
 crc32.o : crc32.h
-gdb-rsp.o : rs232.h tcpip.h
-xmltractor.o : xmltractor.h
+gdb-rsp.o : bmp-support.h gdb-rsp.h rs232.h tcpip.h
 bmtrace.o : guidriver.h nuklear.h nuklear_config.h bmp-script.h \
 	bmp-support.h bmp-scan.h gdb-rsp.h minIni.h minGlue.h \
-	nuklear_mousepointer.h nuklear_tooltip.h noc_file_dialog.h rs232.h \
-	specialfolder.h parsetsdl.h decodectf.h dwarf.h elf.h swotrace.h \
-	tcpip.h res/icon_download_64.h
+	noc_file_dialog.h nuklear_mousepointer.h nuklear_tooltip.h rs232.h \
+	specialfolder.h tcpip.h dwarf.h elf.h parsetsdl.h decodectf.h \
+	swotrace.h res/icon_download_64.h
+bmscan.o : bmp-scan.h tcpip.h
 elf-postlink.o : elf.h
 tracegen.o : parsetsdl.h
-usb-support.o : usb-support.h
 
