--- a/source/makefile.dep
+++ b/source/makefile.dep
@@ -5,7 +5,7 @@
 bmdebug.obj : bmp-scan.h bmp-script.h dwarf.h guidriver.h nuklear.h \
 	nuklear_config.h noc_file_dialog.h nuklear_mousepointer.h \
 	nuklear_tooltip.h minIni.h minGlue.h specialfolder.h svd-support.h \
-	tcpip.h parsetsdl.h decodectf.h swotrace.h
+	tcpip.h parsetsdl.h decodectf.h swotrace.h serialmon.h
 bmp-scan.obj : bmp-scan.h tcpip.h
 bmp-script.obj : bmp-script.h specialfolder.h
 dwarf.obj : dwarf.h elf.h
@@ -16,6 +16,7 @@ minini.obj : minIni.h minGlue.h
 nuklear_mousepointer.obj : nuklear_mousepointer.h
 nuklear_tooltip.obj : nuklear_tooltip.h nuklear.h nuklear_config.h
 rs232.obj : rs232.h
+serialmon.obj : bmp-scan.h decodectf.h parsetsdl.h serialmon.h
 specialfolder.obj : specialfolder.h
 strlcpy.obj : strlcpy.h
 tcpip.obj : bmp-scan.h tcpip.h
@@ -23,7 +24,7 @@ usb-support.obj : usb-support.h
 svd-support.obj : xmltractor.h
 decodectf.obj : parsetsdl.h decodectf.h dwarf.h
 parsetsdl.obj : parsetsdl.h
-swotrace.obj : usb-support.h bmp-scan.h dwarf.h guidriver.h nuklear.h \
+swotrace.obj : usb-support.h bmp-scan.h guidriver.h nuklear.h \
 	nuklear_config.h parsetsdl.h decodectf.h swotrace.h
 xmltractor.obj : xmltractor.h
 nuklear.obj : nuklear.h nuklear_config.h
@@ -50,7 +51,8 @@ tracegen.obj : parsetsdl.h
 bmdebug.o : bmp-scan.h bmp-script.h dwarf.h guidriver.h nuklear.h \
 	nuklear_config.h noc_file_dialog.h nuklear_mousepointer.h \
 	nuklear_tooltip.h minIni.h minGlue.h specialfolder.h svd-support.h \
-	tcpip.h parsetsdl.h decodectf.h swotrace.h res/icon_debug_64.h
+	tcpip.h parsetsdl.h decodectf.h swotrace.h serialmon.h \
+	res/icon_debug_64.h
 bmp-scan.o : bmp-scan.h tcpip.h
 bmp-script.o : bmp-script.h specialfolder.h
 dwarf.o : dwarf.h elf.h
@@ -61,12 +63,13 @@ minIni.o : minIni.h minGlue.h
 nuklear_tooltip.o : nuklear_tooltip.h nuklear.h nuklear_config.h
 nuklear_mousepointer.o : nuklear_mousepointer.h
 rs232.o : rs232.h
+serialmon.o : bmp-scan.h decodectf.h parsetsdl.h serialmon.h
 specialfolder.o : specialfolder.h
 tcpip.o : bmp-scan.h tcpip.h
 decodectf.o : parsetsdl.h decodectf.h dwarf.h
 parsetsdl.o : parsetsdl.h
 svd-support.o : xmltractor.h
-swotrace.o : bmp-scan.h dwarf.h guidriver.h nuklear.h nuklear_config.h \
+swotrace.o : bmp-scan.h guidriver.h nuklear.h nuklear_config.h \
 	parsetsdl.h decodectf.h swotrace.h
 xmltractor.o : xmltractor.h
 nuklear.o : nuklear.h nuklear_config.h
